Bug fix on distorted product images

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,3 +24,10 @@
   margin-right: 15px;
   max-width: 300px;
 }
+
+.product-img {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center 80%;
+  margin: 10px;
+}
